Add ability to disable/enable any type of server

--- a/server-templates/Main.tmpl
+++ b/server-templates/Main.tmpl
@@ -144,7 +144,7 @@ func main() {
 			Flags: []cli.Flag{
                 &cli.BoolFlag{
                     Name:    "UnionServer",
-					Usage:   "Run API server with frontend server together",
+					Usage:   "Run API server, App server and other servers together",
                     Aliases: []string{"union-server","u"},
                     Value:   false,
                     EnvVars: []string{"UNION_SERVER"},
@@ -185,6 +185,18 @@ func main() {
                     Value:   "/",
                     EnvVars: []string{"APP_PATH"},
                 },
+                &cli.BoolFlag{
+                    Name:    "AppServerEnabled",
+                    Aliases: []string{"app-server-enabled"},
+                    Value:   true,
+                    EnvVars: []string{"APP_SERVER_ENABLED"},
+                },
+                &cli.BoolFlag{
+                    Name:    "GraphqlServerEnabled",
+                    Aliases: []string{"graphql-server-enabled", "gql-server-enabled"},
+                    Value:   false,
+                    EnvVars: []string{"GRAPHQL_SERVER_ENABLED"},
+                },
                 &cli.StringFlag{
                     Name:    "GraphqlURL",
                     Aliases: []string{"graphql-url", "gql-url"},
@@ -204,6 +216,12 @@ func main() {
                     Aliases: []string{"graphql-playground-uri-path", "gql-playground-uri-path"},
                     Value:   "/playground",
                     EnvVars: []string{"GRAPHQL_PLAYGROUND_URI_PATH"},
+                },
+                &cli.BoolFlag{
+                    Name:    "GraphqlPlaygroundServerEnabled",
+                    Aliases: []string{"graphql-playground-server-enabled", "gql-playground-server-enabled", "gql-pg-server-enabled"},
+                    Value:   false,
+                    EnvVars: []string{"GRAPHQL_PLAYGROUND_SERVER_ENABLED"},
                 },
 				{{- if and $.Extension.Auth.Enabled $.Extension.Auth.Keycloak.Enabled }}
                 &cli.StringFlag{
@@ -279,13 +297,12 @@ if context.Bool("DevMode"){
 providedLevel:=context.String("LogLevel")
 level, err := zapcore.ParseLevel(providedLevel)
 if err != nil {
-    log.Fatal("unsupported log level", zap.String("provided", providedLevel))
+    log.Fatal("Unsupported log level", zap.String("provided", providedLevel))
 }
 log = log.WithOptions(zap.IncreaseLevel(level))
 
 defer log.Sync()
 
-log.Info("starting server...")
 isHttps := context.Bool("HTTPS")
 host := context.String("Host")
 port := ":" + strconv.Itoa(context.Int("Port"))
@@ -295,12 +312,21 @@ if appPath == ""{
 } else{
 	appPath = "/" + appPath + "/"
 }
-isUnionServer := context.Bool("UnionServer")
 gqlURL := context.String("GraphqlURL")
 gqlURIPath := context.String("GraphqlURIPath")
 gqlPlaygroundURIPath := context.String("GraphqlPlaygroundURIPath")
 proto := "http://"
 appUrl := proto + "localhost" + port + appPath
+gqlPlaygroundServerEnabled := context.Bool("GraphqlPlaygroundServerEnabled")
+appServerEnabled := context.Bool("AppServerEnabled")
+gqlServerEnabled := context.Bool("GraphqlServerEnabled")
+isUnionServer := context.Bool("UnionServer")
+if isUnionServer {
+    log.Info("Union server enabled")
+    appServerEnabled = true
+    gqlServerEnabled = true
+    gqlPlaygroundServerEnabled = true
+}
 
 if isHttps {
     proto = "https://"
@@ -310,12 +336,7 @@ if gqlURL == "" {
     gqlURL += proto + host + port + gqlURIPath
 }
 
-start := time.Now()
-client, err := InitClient(context)
-if err != nil {
-	log.Fatal("failed to start ent client", zap.String("reason", err.Error()))
-}
-log.Info("ent client initialized", zap.Duration("duration", time.Since(start)))
+
 
 // Up MUX server
 mux := http.NewServeMux()
@@ -330,14 +351,18 @@ var(
 )
 {{- end }}
 
-log.Info("Union server", zap.Bool("enabled", isUnionServer), zap.String("graphql-url", gqlURL))
 
-if isUnionServer {
+if gqlServerEnabled {
+	start := time.Now()
+    client, err := InitClient(context)
+    if err != nil {
+        log.Fatal("Failed to start Ent client", zap.Error(err))
+    }
+    log.Info("Ent client initialized", zap.Duration("duration", time.Since(start)))
+
     srv := handler.NewDefaultServer(NewSchema(client))
     srv.Use(entgql.Transactioner{TxOpener: client})
     //srv.Use(&debug.Tracer{})
-    mux.HandleFunc(gqlPlaygroundURIPath, playground.Handler("Example", gqlURIPath))
-
     mux.Handle(gqlURIPath, ent.{{ $prefix | pascal }}AuthMiddleware(
         srv,
         {{- if and $.Extension.Auth.Enabled $.Extension.Auth.Keycloak.Enabled }}
@@ -347,39 +372,48 @@ if isUnionServer {
         keycloakBackendClientSecret,
         {{- end }}
     ))
+	log.Info("Graphql server enabled", zap.String("url", gqlURL))
 }
 
-mux.HandleFunc(appPath+"environment.json", func(writer http.ResponseWriter, request *http.Request) {
-    b, _ := json.Marshal(entkit.Environment{
-        Meta: map[string]any{{ $.Extension.Meta | toJson }},
-        GraphqlURL: gqlURL,
-		AppPath: appPath,
-		{{- if $.Extension.Auth.Enabled }}
-        Auth: &entkit.AuthEnvironment{
-			{{- if $.Extension.Auth.Keycloak.Enabled }}
-            Keycloak: &entkit.KeycloakEnvironment{
-                URL:             keycloakHost,
-                Realm:           keycloakRealm,
-                ClientID:        keycloakFrontendClientID,
-                BackendClientID: keycloakBackendClientID,
+if gqlPlaygroundServerEnabled{
+    gqlPlaygroundURL := proto + host + port + gqlPlaygroundURIPath
+    mux.HandleFunc(gqlPlaygroundURIPath, playground.Handler("{{$.Name}}", gqlURIPath))
+    log.Info("Graphql playground server enabled", zap.String("url", gqlPlaygroundURL))
+}
+
+if appServerEnabled {
+    mux.HandleFunc(appPath+"environment.json", func(writer http.ResponseWriter, request *http.Request) {
+        b, _ := json.Marshal(entkit.Environment{
+            Meta: map[string]any{{ $.Extension.Meta | toJson }},
+            GraphqlURL: gqlURL,
+            AppPath: appPath,
+            {{- if $.Extension.Auth.Enabled }}
+            Auth: &entkit.AuthEnvironment{
+                {{- if $.Extension.Auth.Keycloak.Enabled }}
+                Keycloak: &entkit.KeycloakEnvironment{
+                    URL:             keycloakHost,
+                    Realm:           keycloakRealm,
+                    ClientID:        keycloakFrontendClientID,
+                    BackendClientID: keycloakBackendClientID,
+                },
+                {{- end}}
             },
-			{{- end}}
-        },
-		{{- end }}
+            {{- end }}
+        })
+        writer.Write(b)
     })
-    writer.Write(b)
-})
 
-mux.HandleFunc(
-    appPath,
-    func (w http.ResponseWriter, r *http.Request) {
-        {{- (include "partial:staticHandler" $) | nindent 12 }}
-    },
-)
+    mux.HandleFunc(
+        appPath,
+        func (w http.ResponseWriter, r *http.Request) {
+            {{- (include "partial:staticHandler" $) | nindent 12 }}
+        },
+    )
+    log.Info("App server enabled", zap.String("url", appUrl))
+}
 
-log.Info("server started", zap.String("address", appUrl))
 if err := http.ListenAndServe(port, mux); err != nil {
-    log.Fatal("server failed", zap.String("reason", err.Error()))
+    log.Fatal("Server failed", zap.Error(err))
 }
 
 {{- end -}}
@@ -391,7 +425,7 @@ if r.Method != "GET" {
     return
 }
 start := time.Now()
-log.Debug("request starts", zap.String("path", r.URL.Path), zap.Time("time", start))
+log.Debug("Request starts", zap.String("path", r.URL.Path), zap.Time("time", start))
 
 path := filepath.Clean(r.URL.Path)
 path = strings.TrimPrefix(path, appPath)
@@ -418,19 +452,17 @@ if isStaticPath {
 file, err := {{$.Name | pascal}}FS.Open(filepath.Join("{{ $.Name }}",path))
 if err != nil {
     if os.IsNotExist(err) {
-        log.Warn("file not found", zap.String("path", path), zap.String("reason", err.Error()))
+        log.Info("File not found", zap.String("path", path), zap.Error(err))
         http.NotFound(w, r)
         return
     }
-    log.Warn("file cannot be read", zap.String("path", path), zap.String("reason", err.Error()))
+    log.Info("File cannot be read", zap.String("path", path), zap.Error(err))
     http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
     return
 }
 
 contentType := mime.TypeByExtension(filepath.Ext(path))
 w.Header().Set("Content-Type", contentType)
-
-
 
 var n int64
 if path == "{{$.ServableAdapter.RewritePath}}" {
@@ -454,6 +486,6 @@ if path == "{{$.ServableAdapter.RewritePath}}" {
     n, _ = io.Copy(w, file)
 }
 
-log.Debug("serving file", zap.String("path", path), zap.Int64("bytes", n))
-log.Info("request handled", zap.String("path", r.URL.Path), zap.Duration("duration", time.Since(start)))
+log.Debug("Serving file", zap.String("path", path), zap.Int64("bytes", n))
+log.Info("Request handled", zap.String("path", r.URL.Path), zap.Duration("duration", time.Since(start)))
 {{- end -}}
