Fix broken server links

--- a/refine-templates/Index.gohtml
+++ b/refine-templates/Index.gohtml
@@ -38,6 +38,7 @@
     <title>
         refine - Build your React-based CRUD applications, without constraints.
     </title>
+    <script data-name="environment">window.environment={{ $.Extension.Environment | toJson }}</script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
