--- a/server-templates/Main.tmpl
+++ b/server-templates/Main.tmpl
@@ -16,6 +16,7 @@ import (
     "github.com/99designs/gqlgen/graphql/handler"
     "github.com/99designs/gqlgen/graphql/playground"
     "github.com/urfave/cli/v2"
+    "github.com/joho/godotenv"
     "io"
 	"bytes"
 	"regexp"
@@ -275,6 +276,7 @@ func main() {
         },
     }
 
+    _ = godotenv.Load()
     if err := app.Run(os.Args); err != nil {
         fmt.Println(err.Error())
     }
